--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,8 @@ build:
   variables:
     Dockerfile: v0.14/debian
   script:
+    - apk update
+    - apk add make
     - export IMAGE_TAG=$(echo -en $CI_COMMIT_REF_NAME | tr -c '[:alnum:]_.-' '-')
     - docker login -u "gitlab-ci-token" -p "$CI_JOB_TOKEN" $CI_REGISTRY
     - make image DOCKERFILE=$Dockerfile VERSION=test | sleep 999999
