--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,10 +12,9 @@ build:
   script:
     - apk update
     - apk add make
-    - export IMAGE_TAG=$(echo -en $CI_COMMIT_REF_NAME | tr -c '[:alnum:]_.-' '-')
     - docker login -u "gitlab-ci-token" -p "$CI_JOB_TOKEN" $CI_REGISTRY
-    - make image DOCKERFILE=$Dockerfile VERSION=test | sleep 999999
-    - make test DOCKERFILE=$Dockerfile VERSION=test | sleep 999999
+    - make image DOCKERFILE=$Dockerfile VERSION=${CI_COMMIT_REF_SLUG}.${CI_PIPELINE_ID}.${CI_JOB_ID} || sleep 999999
+    - make test DOCKERFILE=$Dockerfile VERSION=${CI_COMMIT_REF_SLUG}.${CI_PIPELINE_ID}.${CI_JOB_ID} || sleep 999999
     - sleep 999999
     - echo docker build --pull -t "$CI_REGISTRY_IMAGE:$IMAGE_TAG" .
     - docker push "$CI_REGISTRY_IMAGE:$IMAGE_TAG"
