list images so we can investigate tagging

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,8 @@ build:
     - apk add make
     - docker login -u "gitlab-ci-token" -p "$CI_JOB_TOKEN" $CI_REGISTRY
     - make image DOCKERFILE=$Dockerfile VERSION=${CI_COMMIT_REF_SLUG}.${CI_PIPELINE_ID}.${CI_JOB_ID} || sleep 999999
-    - make test DOCKERFILE=$Dockerfile VERSION=${CI_COMMIT_REF_SLUG}.${CI_PIPELINE_ID}.${CI_JOB_ID} || sleep 999999
+    - docker images | head -5
+    - echo make test DOCKERFILE=$Dockerfile VERSION=${CI_COMMIT_REF_SLUG}.${CI_PIPELINE_ID}.${CI_JOB_ID} || sleep 999999
     - sleep 999999
     - echo docker build --pull -t "$CI_REGISTRY_IMAGE:$IMAGE_TAG" .
     - docker push "$CI_REGISTRY_IMAGE:$IMAGE_TAG"
