--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,7 @@ build:
     - apk add make
     - docker login -u "gitlab-ci-token" -p "$CI_JOB_TOKEN" $CI_REGISTRY
     - make image DOCKERFILE=$Dockerfile VERSION=$ImageTag || sleep 999999
-    - set -x
-    - docker tag fluentd/fluentd:${ImageTag} ${ImageName}:${ImageTag}
+    - docker tag fluent/fluentd:${ImageTag} ${ImageName}:${ImageTag}
     - echo make test DOCKERFILE=$Dockerfile VERSION=$ImageTag || sleep 999999
     - sleep 999999
     - echo docker build --pull -t "$CI_REGISTRY_IMAGE:$ImageTag" .
