--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,4 @@ build:
     - make image DOCKERFILE=$Dockerfile VERSION=$ImageTag || sleep 999999
     - docker tag fluent/fluentd:${ImageTag} ${ImageName}:${ImageTag}
     - echo make test DOCKERFILE=$Dockerfile VERSION=$ImageTag || sleep 999999
-    - sleep 999999
-    - echo docker build --pull -t "$CI_REGISTRY_IMAGE:$ImageTag" .
-    - docker push "$CI_REGISTRY_IMAGE:$ImageTag"
+    - docker push "${ImageName}:${ImageTag}"
