--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,8 @@ build:
   stage: build
   variables:
     Dockerfile: v0.14/debian
-    ImageTag: "${CI_COMMIT_REF_SLUG}.${CI_PIPELINE_ID}.${CI_JOB_ID}"
-    ImageName: "${CI_REGISTRY_IMAGE}/v0.14/debian"
+    ImageTag: "v0.14/debian-${CI_COMMIT_REF_SLUG}.${CI_PIPELINE_ID}.${CI_JOB_ID}"
+    ImageName: "${CI_REGISTRY_IMAGE}
   script:
     - apk update
     - apk add make
