--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,35 @@
 # This file is a template, and might need editing before it works on your project.
 # Official docker image.
+variables:
+  FLUENTD_BRANCH: master
+
 image: docker:latest
 
 services:
   - docker:dind
+
+before_script:
+  - export BASE_URL=${BASE_URL:-$(echo $CI_PROJECT_URL |  cut -d'/' -f1-3)}
+  - export KUBECONFIG=$(pwd)/data/${CI_ENVIRONMENT_SLUG}/kubeconfig
+  - mkdir -p ./data ; touch ./data/empty.env
+  - for envfile in data/*env ; do source $envfile ; echo ----- $envfile ---- ; cat $envfile ; done
+  
+fluentd-master:
+  image: ${CI_REGISTRY}/cncf/cross-cloud/provisioning:$CI_COMMIT_REF_SLUG
+  stage: cncf-artifacts
+  script:
+    - RELEASE_ENV_URL="$BASE_URL/fluent/fluentd/builds/artifacts/${FLUENTD_BRANCH}/file/release.env?job=release"
+    - echo $RELEASE_ENV_URL
+    - FLUENTD_RELEASE_ENV=$(curl -s -L
+        $RELEASE_ENV_URL
+        |  sed -n 's/.*href="\([^"]*\).*/\1/p' | grep artifacts/raw | tail -1)
+    - curl -s -o data/fluentd.env -L ${BASE_URL}/$FLUENTD_RELEASE_ENV
+    - cat data/fluentd.env
+  artifacts:
+    when: always
+    expire_in: 4 weeks
+    paths:
+      - ./data/
 
 build:
   stage: build
