--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,9 @@
 # This file is a template, and might need editing before it works on your project.
 # Official docker image.
+stages:
+  cncf-artifacts
+  build
+
 variables:
   FLUENTD_BRANCH: master
 
